--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,12 @@ max-line-length=180
 select = E,W,F,N,I
 
 [tox]
-envlist=py27,flake8
+envlist=py27,py34,py35,flake8
 
 [tox:travis]
 2.7=py27,flake8
+3.4=py34
+3.5=py35,flake8
 
 [testenv]
 commands=python setup.py test
